--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tarojs/taro-tt": "1.3.17",
     "@tarojs/taro-weapp": "1.3.17",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "redux": "^4.0.0",
@@ -52,6 +53,7 @@
     "@tarojs/plugin-uglifyjs": "1.3.17",
     "@tarojs/webpack-runner": "1.3.17",
     "@types/classnames": "^2.2.9",
+    "@types/lodash": "^4.14.144",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/parser": "^1.6.0",
