--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "classnames": "^2.2.6",
     "invariant": "^2.2.4",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "redux": "^4.0.0",
