--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tarojs/taro-swan": "1.3.17",
     "@tarojs/taro-tt": "1.3.17",
     "@tarojs/taro-weapp": "1.3.17",
+    "blueimp-md5": "^2.12.0",
     "classnames": "^2.2.6",
     "invariant": "^2.2.4",
     "lodash": "^4.17.15",
