* 新增 numeral 加入抹零

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.24.0",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
+    "numeral": "^2.0.6",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -58,6 +59,7 @@
     "@types/classnames": "^2.2.9",
     "@types/invariant": "^2.2.30",
     "@types/lodash": "^4.14.144",
+    "@types/numeral": "^0.0.26",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/parser": "^1.6.0",
