* 新增 一期需求基本完毕

--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "scanbar",
   "description": "scan bar for centerm company",
-  "appid": "touristappid",
+  "appid": "wxb433be9efd0a2a83",
   "setting": {
     "urlCheck": true,
     "es6": false,
