--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@tarojs/taro-weapp": "1.3.17",
     "blueimp-md5": "^2.12.0",
     "classnames": "^2.2.6",
+    "dayjs": "^1.8.17",
     "invariant": "^2.2.4",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "lodash.merge": "^4.6.2",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "numeral": "^2.0.6",
@@ -59,6 +59,7 @@
     "@types/classnames": "^2.2.9",
     "@types/invariant": "^2.2.30",
     "@types/lodash": "^4.14.144",
+    "@types/lodash.merge": "^4.6.6",
     "@types/numeral": "^0.0.26",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
