--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "blueimp-md5": "^2.12.0",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.17",
+    "echarts12": "^1.1.5-alpha.0",
     "invariant": "^2.2.4",
     "lodash.merge": "^4.6.2",
     "nerv-devtools": "^1.4.0",
@@ -54,6 +55,7 @@
     "@tarojs/plugin-csso": "1.3.17",
     "@tarojs/plugin-less": "1.3.17",
     "@tarojs/plugin-sass": "^1.3.22",
+    "@tarojs/plugin-stylus": "^1.3.27",
     "@tarojs/plugin-uglifyjs": "1.3.17",
     "@tarojs/webpack-runner": "1.3.17",
     "@types/classnames": "^2.2.9",
