--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "taro-ui": "^2.2.4"
+    "taro-ui": "^2.2.4",
+    "xxx": "^0.0.1"
   },
   "devDependencies": {
     "@tarojs/plugin-babel": "1.3.17",
