--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
     "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch"
+    "dev:rn": "npm run build:rn -- --watch",
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
@@ -52,6 +53,7 @@
     "xxx": "^0.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
     "@tarojs/plugin-babel": "1.3.17",
     "@tarojs/plugin-csso": "1.3.17",
     "@tarojs/plugin-less": "1.3.17",
@@ -61,13 +63,16 @@
     "@tarojs/webpack-runner": "1.3.17",
     "@types/classnames": "^2.2.9",
     "@types/invariant": "^2.2.30",
+    "@types/jest": "^24.0.25",
     "@types/lodash": "^4.14.144",
     "@types/lodash.merge": "^4.6.6",
     "@types/numeral": "^0.0.26",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/parser": "^1.6.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^24.9.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
@@ -79,9 +84,35 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-taro": "1.3.17",
+    "jest": "^24.9.0",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "1.3.17",
     "stylelint-taro-rn": "1.3.17",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.0.1"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(ts|tsx)$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "globals": {
+      "ts-jest": {
+        "babelConfig": true,
+        "tsConfig": "<rootDir>/tsconfig.json",
+        "diagnostics": false
+      }
+    },
+    "cacheDirectory": ".jest/cache"
   }
 }
