--- a/package.json
+++ b/package.json
@@ -54,12 +54,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-react-jsx": "^7.7.7",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.1.0",
+    "@tarojs/components": "^1.3.21",
     "@tarojs/plugin-babel": "1.3.17",
     "@tarojs/plugin-csso": "1.3.17",
     "@tarojs/plugin-less": "1.3.17",
     "@tarojs/plugin-sass": "^1.3.22",
     "@tarojs/plugin-stylus": "^1.3.27",
     "@tarojs/plugin-uglifyjs": "1.3.17",
+    "@tarojs/router": "^1.3.21",
+    "@tarojs/taro": "^1.3.21",
+    "@tarojs/taro-alipay": "^1.3.21",
+    "@tarojs/taro-h5": "^1.3.21",
+    "@tarojs/taro-swan": "^1.3.21",
+    "@tarojs/taro-weapp": "^1.3.21",
     "@tarojs/webpack-runner": "1.3.17",
     "@types/classnames": "^2.2.9",
     "@types/invariant": "^2.2.30",
@@ -68,6 +79,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/numeral": "^0.0.26",
     "@types/react": "^16.4.8",
+    "@types/sinon": "^5.0.5",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -78,41 +90,26 @@
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-taro": "1.3.17",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-taro": "1.3.17",
+    "husky": "^1.1.2",
     "jest": "^24.9.0",
+    "lint-staged": "^8.0.3",
+    "nerv-server": "^1.4.3",
+    "nerv-test-utils": "^1.4.3",
+    "nervjs": "^1.4.3",
+    "regenerator-runtime": "^0.12.1",
+    "simulant": "^0.2.2",
+    "sinon": "^7.1.0",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "1.3.17",
     "stylelint-taro-rn": "1.3.17",
     "ts-jest": "^24.2.0",
     "typescript": "^3.0.1"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/"
-    ],
-    "globals": {
-      "ts-jest": {
-        "babelConfig": true,
-        "tsConfig": "<rootDir>/tsconfig.json",
-        "diagnostics": false
-      }
-    },
-    "cacheDirectory": ".jest/cache"
   }
 }
