--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "taro-ui": "^2.2.4",
-    "xxx": "^0.0.1"
+    "taro-ui": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
