--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "numeral": "^2.0.6",
+    "react": "^17.0.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
